fixed media header buttons spacing

--- a/src/apps/media-2/src/app/components/MediaDetailsModal.less
+++ b/src/apps/media-2/src/app/components/MediaDetailsModal.less
@@ -110,9 +110,9 @@
     }
   }
 
-  .ModalFooter {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
+  // .ModalFooter {
+  //   display: flex;
+  //   justify-content: space-between;
+  //   align-items: center;
+  // }
 }
